z-index fixed

--- a/production/css/screen.css
+++ b/production/css/screen.css
@@ -145,6 +145,7 @@ textarea { resize: vertical; margin: 0; line-height: 16px; padding: 10px 15px; }
 .case__item.first .case-bg { background: url('../../src/img/icons-s53e8cc975d.png') 0 -488px no-repeat; width: 576px; height: 81px; right: -50px; bottom: 10px; }
 .case__item.second .case-bg { background: url('../../src/img/icons-s53e8cc975d.png') 0 0 no-repeat; width: 376px; height: 172px; }
 .case__item.third .case-bg { background: url('../../src/img/icons-s53e8cc975d.png') 0 -182px no-repeat; width: 368px; height: 158px; bottom: 20px; }
+.case__item.is-active { z-index: 120 !important; }
 .case__item.is-active .case__header-i { -webkit-transform: translateY(0); -moz-transform: translateY(0); -ms-transform: translateY(0); -o-transform: translateY(0); transform: translateY(0); filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
 .case__item.is-active .case-bg { -webkit-transform: translateX(0); -moz-transform: translateX(0); -ms-transform: translateX(0); -o-transform: translateX(0); transform: translateX(0); filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
 .case__item.is-active .case__columns { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; -webkit-transition: all 0.6s ease-in; -moz-transition: all 0.6s ease-in; -o-transition: all 0.6s ease-in; transition: all 0.6s ease-in; -webkit-transform: translateY(0); -moz-transform: translateY(0); -ms-transform: translateY(0); -o-transform: translateY(0); transform: translateY(0); -webkit-transition-delay: 0.4s; -moz-transition-delay: 0.4s; -o-transition-delay: 0.4s; transition-delay: 0.4s; }
