--- a/src/sass/_case.sass
+++ b/src/sass/_case.sass
@@ -48,6 +48,7 @@
 			+s(case_3)
 			bottom: 20px
 	&.is-active
+		z-index: 120 !important
 		.case__header-i
 			+transform(translateY(0))
 			+opacity(1)
